Added Marque and a StyleSheet

--- a/page2.html
+++ b/page2.html
@@ -8,9 +8,18 @@
     <meta name="description" content="Test Page 2">
     <meta name="author" content="Jones">
   
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="resources/styles.css">
 </head>
+
 <body>
+<nav class="navBar">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="page2.html"class="active">Page2</a></li>
+        <li><a href="">PlaceHolder</a></li>
+        <li><a href="">PlaceHolder</a></li>
+    </ul>
+</nav>
 <h1>Welcome to Page 2!</h1>
 
 
@@ -23,7 +32,7 @@
 <script src="https://www.w3schools.com/js/myScript.js"></script>
 
 
-<a href="test.html">Oh god take me back please!</a>
+<a href="index.html">Oh god take me back please!</a>
 </body>
 <footer>
     <p>footer text</p>
