--- a/index.html
+++ b/index.html
@@ -7,26 +7,29 @@
   <title>Test Page</title>
   <meta name="description" content="Test Page">
   <meta name="author" content="Jones">
+  <link rel="icon" href="/resources/hollow_knight_icon.png">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="resources/styles.css">
+
 </head>
-
-
-<style>
-  body {
-    background-color: orange;
-  }
-  h1{
-    text-align: center;
-  }
-</style>
 
 <!-- GURL LOOKIT THAT BODY -->
 <body>
-
+<nav class="navBar">
+<ul>
+  <li><a href="index.html" class="active">Home</a></li>
+  <li><a href="page2.html">Page2</a></li>
+  <li><a href="">PlaceHolder</a></li>
+  <li><a href="">PlaceHolder</a></li>
+</ul>
+</nav>
 
 <h1> Yo </h1>
+<marquee behavior="scroll" direction="right">
+  <img src="resources/hollow_knight_sprite.gif" >
+</marquee>
 
+<br>
 Math Script: <script>document.write(5+6)</script>
 
 <!-- Button 1 -->
@@ -37,7 +40,7 @@ Math Script: <script>document.write(5+6)</script>
 <button type="button" onclick="myFunction()">~~<em>Change Demo Text</em>~~</button>
 
 <!-- <script type = "text/javascript" src="/js/scripts.js"> </script> -->
-<script type = "text/javascript" src="/js/scripts.js">document.write(testChangeVar('Nik','Jones'))</script>
+<script type = "text/javascript" src="js/scripts.js">document.write(testChangeVar('Nik','Jones'))</script>
 <script type = "text/javascript" src="js/scripts.js"> testLine()</script>
 
 <br>  
