--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <ul>
   <li><a href="index.html" class="active">Home</a></li>
   <li><a href="page2.html">Page2</a></li>
-  <li><a href="">PlaceHolder</a></li>
-  <li><a href="">PlaceHolder</a></li>
+  <li><a href="formPage.html">Form</a></li>
+  <li><a href="login.html">Login</a></li>
 </ul>
 </nav>
 
