--- a/page2.html
+++ b/page2.html
@@ -16,8 +16,8 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="page2.html"class="active">Page2</a></li>
-        <li><a href="">PlaceHolder</a></li>
-        <li><a href="">PlaceHolder</a></li>
+        <li><a href="formPage.html">Form</a></li>
+        <li><a href="login.html">Login</a></li>
     </ul>
 </nav>
 <h1>Welcome to Page 2!</h1>
