Bootstrap trial page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 <marquee behavior="scroll" direction="right">
   <img src="resources/hollow_knight_sprite.gif" >
 </marquee>
-
+<a href="log2.html">jsLog</a><br>
+<a href="bootstrapTrial.html">Bootstrap</a>
 <br>
 Math Script: <script>document.write(5+6)</script>
 
@@ -40,8 +41,8 @@ Math Script: <script>document.write(5+6)</script>
 <button type="button" onclick="myFunction()">~~<em>Change Demo Text</em>~~</button>
 
 <!-- <script type = "text/javascript" src="/js/scripts.js"> </script> -->
-<script type = "text/javascript" src="js/scripts.js">document.write(testChangeVar('Nik','Jones'))</script>
-<script type = "text/javascript" src="js/scripts.js"> testLine()</script>
+<script>document.write(testChangeVar('Nik','Jones'))</script>
+<script> testLine()</script>
 
 <br>  
 
@@ -54,6 +55,7 @@ Math Script: <script>document.write(5+6)</script>
 
 <!-- link off page -->
 <a href="page2.html">Take me to page 2 please</a>
+<script type="text/javascript" src="js/scripts.js"></script>
 </body>
 <footer>
   FOOTER TEXT
