--- a/login.html
+++ b/login.html
@@ -15,15 +15,10 @@
 
 <!-- GURL LOOKIT THAT BODY -->
 <body>
-    <nav class="navBar">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="page2.html">Page2</a></li>
-      <li><a href="formPage.html">Form</a></li>
-      <li><a href="login.html" class ="active">Login</a></li>
-    </ul>
-    </nav>
-
+<header>
+    <script type="text/javascript" src="js/navigation.js"></script>
+</header> 
+<main>
 <p>Login here:</p>
 <form>
     <div>
@@ -36,6 +31,7 @@
     </div>
 </form>
     <br>
+</main>
 </body>
 <hr>
 <footer>
